
= rufus-jig CHANGELOG.txt


== rufus-jig - 0.1.7    not yet released

- :accept => :json as a shorcut for :accept -> 'application/json'


== rufus-jig - 0.1.6    released 2009/12/21

- implemented close for Http and Couch classes


== rufus-jig - 0.1.5    released 2009/12/17

- returning true (not raising) in case of 409 conflict
- using jeweler (thanks Kenneth)
- made jig/patron really thread-safe


== rufus-jig - 0.1.4    released 2009/12/15

- made jig/patron thread-safe


== rufus-jig - 0.1.3    released 2009/12/15

- delete(doc) without _rev now raises ArgumentError
- Patron session go stale. Now refreshing them at each request.
- CouchDatabase#put_doc : 1 or 2 params


== rufus-jig - 0.1.2    released 2009/12/07

- fixed issue with '/' and net/http. Thanks Torsten.


== rufus-jig - 0.1.1    released


== rufus-jig - 0.1.0    released 2009/11/09
